<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/display"
        android:background="@color/colorPrimaryDark"
        tools:context=".DisplayScore">
        <ImageView
            android:id="@+id/im"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/code"
            android:scaleType="centerCrop"
            android:layout_alignParentTop="true"/>
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:textColor="#000"
            android:background="#FFF"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:layout_marginBottom="16dp"
                >
                <ImageView
                    android:id="@+id/pic"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/java"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="4dp"
                    />
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    tools:text="Name: John Doe"
                    android:textColor="#000"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="4dp"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/question1"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingHorizontal="8dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="4dp"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oneA"
                android:id="@+id/ans"/>

            <CheckBox
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oneB"
                />
            <CheckBox
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oneC"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oneD"
                android:id="@+id/ans2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="previous"
                    android:background="@drawable/button_border"
                    android:textColor="#FFF"
                    android:onClick="previous"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_alignParentRight="true"
                    android:text="next"
                    android:onClick="next"
                    android:background="@drawable/button_border"
                    android:textColor="#FFF"/>
            </RelativeLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:text="end quiz"
            android:textColor="#FFFFFF"
            android:layout_below="@id/linear"
            android:onClick="endApp"/>
    </RelativeLayout>
</ScrollView>